--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 2.0 Snapshot ::</h1>
+	<h1>:: Readme :: Looks 2.0 Beta ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -127,7 +127,7 @@
 
 		<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		    <td><tt>looks-2.0-snapshot.jar</tt></td>
+		    <td><tt>looks-2.0-beta.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
@@ -216,14 +216,21 @@
 	Windows look&amp;feel look and feel like Windows.
 	
 	<p>
-	As of the Looks 1.3.2 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
+	As of the Looks 2.0 and winlaf 0.5.1, the JGoodies Windows l&amp;f 
 	provides a more precise micro design for 96dpi and 120dpi which 
-	leads to better readability and legibility if used with a
+	leads to better readability and legibility, especially if used with a
 	precise layout system such as 
 	the <a href="http://forms.dev.java.net/">JGoodies Forms</a>.
-	Also, the JGoodies Windows l&amp;f uses component sizes that
-	are closer to the native original and make it easier to switch
-	the look&amp;feel to the multiplatform Plastic l&amp;f family.
+	The JGoodies Windows l&amp;f uses consistent component sizes and insets,
+	and it follows the Windows Layout Specifications and Guidelines.
+	Unlike winlaf, the JGoodies L&f can be uninstalled properly at runtime
+	enabling a hot L&amp;f switch.
+	Last but not least, the Looks 2.0 supports Java 6 and Windows Vista.
+	
+	<p>
+	Since the Plastic L&amp;f family uses the same fonts, component
+	bounds and insets as the JGoodies Windows L&amp;f, it is quite
+	easy to change from a Windows look to the multiplatform Plastic look.
 	
 	<p>
 	Currently both the winlaf and JGoodies l&amp;f fix bugs in the 
