Refreshed the readme acknowledgements section

--- a/www/index.html
+++ b/www/index.html
@@ -133,7 +133,9 @@
 	<h3>Acknowledgements</h3>
 	
 	<p>
-	The Looks project has been financed by customers of the 
+	The Looks project has been financed by 
+	the Java desktop team at Sun Microsystems,
+	and customers of the 
 	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.
