--- a/README.html
+++ b/README.html
@@ -109,8 +109,9 @@
     but I'd like to verify the latter before publishing the 2.0 final.
     
     <p>
-    Therefore I'd like to get feedback from users that run Java 1.4.2, 
-    Java 5 or Java 6 on a non-western Windows, especially XP and Vista.    
+    Therefore I'd like to get feedback from users that run 
+    a Chinese, Japanese, Korean, or other non-Western Windows XP
+    or Windows Vista with Java 1.4.2, Java 5 or Java 6.  
     This Beta ships with a FontTest tool (<tt>fonttest.jar</tt>)
     that displays detailed information about the Java environment,
     platform, and font settings. I should appreciate
