--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 2.0 Beta2 ::</h1>
+	<h1>:: Readme :: Looks 2.0 RC ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -121,15 +121,9 @@
 
 		<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		    <td><tt>looks-2.0-beta2.jar</tt></td>
+		    <td><tt>looks-2.0-rc.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
-		</tr>
-		<tr><td colspan="3">&nbsp;</td></tr>
-		<tr>
-		    <td><tt>fonttest.jar</tt></td>
-		    <td>&nbsp;</td>
-		    <td>Beta test tool, see the <a href="RELEASE-NOTES.txt">Release Notes</a></td>
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
