--- a/README.html
+++ b/README.html
@@ -68,7 +68,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 2.0 RC ::</h1>
+	<h1>:: Readme :: Looks 2.0 ::</h1>
 	
 	<i>Free high-fidelity Windows and multi-platform appearance</i>
 
@@ -121,7 +121,7 @@
 
 		<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		    <td><tt>looks-2.0-rc.jar</tt></td>
+		    <td><tt>looks-2.0.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
