--- a/www/faq.html
+++ b/www/faq.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
 	<title>FAQ</title>
@@ -8,6 +7,9 @@
 	<meta name="robots"	 content="index, follow">
 	<meta name="date"	 content="2006-03-03">
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <style type="text/css">/* <![CDATA[ */ @import "/branding/css/tigris.css"; @import "/branding/css/inst.css";/* ]]> */ 
+	</style>	
+	<link rel="stylesheet" type="text/css" href="/branding/css/print.css" media="print" />
 </head>
 <body>
 
