--- a/www/faq.html
+++ b/www/faq.html
@@ -1,20 +1,8 @@
 <html>
-<head>
-	<title>FAQ</title>
-	<meta name="description" content="The JGoodies Looks make your Swing apps and applets look better.">
-	<meta name="author"	 content="Karsten Lentzsch">
-	<meta name="keywords"	 content="JGoodies Looks Java Swing UI Design Usability Lentzsch Kiel">
-	<meta name="robots"	 content="index, follow">
-	<meta name="date"	 content="2006-03-03">
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <style type="text/css">/* <![CDATA[ */ @import "/branding/css/tigris.css"; @import "/branding/css/inst.css";/* ]]> */ 
-	</style>	
-	<link rel="stylesheet" type="text/css" href="/branding/css/print.css" media="print" />
-</head>
 <body>
 
 	  
-	<h1>:: Frequently Asked Questions ::</h1>
+	<h1>Frequently Asked Questions</h1>
 
 	<h2>1. General</h2>
     <p>
@@ -41,7 +29,7 @@
 
 
 	
-	<h1>:: 1. General ::</h2>
+	<h1>1. General</h2>
 	
 		<h2><a name="1.1">1.1 - What are the main benefits of the Looks?</a></h2>
 
@@ -170,7 +158,7 @@
 
 	<p>&nbsp;<br>
 	
-	<h1>:: 2. Working With Look&amp;Feels ::</h2>
+	<h1>2. Working With Look&amp;Feels</h2>
 	
 		<h2><a name="2.1">2.1 - How to use a JGoodies Look&amp;Feel?</a></h2>
 
@@ -204,7 +192,7 @@
 		
 	<p>&nbsp;<br>
 	
-	<h1>:: 3. Trouble Shooting ::</h2>
+	<h1>3. Trouble Shooting</h2>
 	
 
 		<h2><a name="3.1">3.1 - ClassNotFoundExceptions when launched with Java Web Start</a></h2>
