--- a/www/faq.html
+++ b/www/faq.html
@@ -6,26 +6,26 @@
 
 	<h2>1. General</h2>
     <p>
-		    &nbsp;<a href="#1.1">1.1 - What are the main benefits of the Looks?</a>
-		<br>&nbsp;<a href="#1.2">1.2 - Can I use the Looks in a commercial product?</a>
-		<br>&nbsp;<a href="#1.3">1.3 - Where do I get the latest version?</a>
-		<br>&nbsp;<a href="#1.4">1.4 - Where can I find a version for Java 1.3?</a>
-		<br>&nbsp;<a href="#1.5">1.5 - Where do I get support?</a>
-		<br>&nbsp;<a href="#1.6">1.6 - How to report a problem?</a>
-		<br>&nbsp;<a href="#1.7">1.7 - Why not put the Looks JAR into the extension directory?</a>
+		    &nbsp;1.1 - <a href="#1.1">What are the main benefits of the Looks?</a>
+		<br>&nbsp;1.2 - <a href="#1.2">Can I use the Looks in a commercial product?</a>
+		<br>&nbsp;1.3 - <a href="#1.3">Where do I get the latest version?</a>
+		<br>&nbsp;1.4 - <a href="#1.4">Where can I find a version for Java 1.3?</a>
+		<br>&nbsp;1.5 - <a href="#1.5">Where do I get support?</a>
+		<br>&nbsp;1.6 - <a href="#1.6">How to report a problem?</a>
+		<br>&nbsp;1.7 - <a href="#1.7">Why not put the Looks JAR into the extension directory?</a>
 
 
 	<h2>2. Working With the Look&amp;Feels</h2>
     <p>
-		    &nbsp;<a href="#2.1">2.1 - How to use a JGoodies Look&amp;Feel?</a>
-		<br>&nbsp;<a href="#2.2">2.2 - How to set a Plastic color theme?</a>
-		<br>&nbsp;<a href="#2.3">2.3 - How to remove the JTabbedPane content border?</a>
+		    &nbsp;2.1 - <a href="#2.1">How to use a JGoodies Look&amp;Feel?</a>
+		<br>&nbsp;2.2 - <a href="#2.2">How to set a Plastic color theme?</a>
+		<br>&nbsp;2.3 - <a href="#2.3">How to remove the JTabbedPane content border?</a>
 
 
 	<h2>3. Trouble Shooting</h2>
     <p>
-		    &nbsp;<a href="#3.1">3.1 - ClassNotFoundExceptions when launched with Java Web Start.</a>
-		<br>&nbsp;<a href="#3.2">3.2 - The Plastic color theme I set is ignored.</a>
+		    &nbsp;3.1 - <a href="#3.1">ClassNotFoundExceptions when launched with Java Web Start.</a>
+		<br>&nbsp;3.2 - <a href="#3.2">The Plastic color theme I set is ignored.</a>
 
 
 	
@@ -33,6 +33,7 @@
 	
 		<h2><a name="1.1">1.1 - What are the main benefits of the Looks?</a></h2>
 
+		<p>
 		The Looks improve the readability, legibility and usability. 
 		They simplify the support for multiple platforms. 
 		And many people have reviewed them as elegant.
@@ -40,6 +41,7 @@
 
 		<h2><a name="1.2">1.2 - Can I use the Looks in a commercial product?</a></h2>
 
+		<p>
 		You can use and redistribute the Looks in source and binary form
 		- even for commercial use - if you comply with the terms of the 
 		<a href="../LICENSE.txt">BSD open source license</a>.
@@ -47,6 +49,7 @@
 
 		<h2><a name="1.3">1.3 - Where do I get the latest version?</a></h2>
 
+		<p>
 		The latest version is available in the project's 
 		<a href="https://looks.dev.java.net/servlets/ProjectDocumentList">download section</a>
 		section, where you can download the libraries, 
@@ -55,6 +58,7 @@
 
 		<h2><a name="1.4">1.4 - Where can I find a version for Java 1.3?</a></h2>
 
+		<p>
 		The Looks version 1.1.3 is available in the  
 		<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">Archive</a>
 		of the Documents &amp; files section of the java.net project pages.
@@ -62,9 +66,10 @@
 
 		<h2><a name="1.5">1.5 - Where do I get support?</a></h2>
 
-	    <b>Please check this FAQ and 
+		<p>
+	    Please check this FAQ and 
 	    send mail only to the user mailing list
-	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.</b>
+	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
 	    <p>
 
 		You may subscribe to the 
@@ -93,6 +98,7 @@
 
 		<h2><a name="1.6">1.6 - How to report a problem?</a></h2>
 		
+		<p>
 		In case of a general problem, first 
 		<a href="https://looks.dev.java.net/servlets/SummarizeList?listName=users&by=subject">browse</a>
 		or 
@@ -118,6 +124,7 @@
 		
 		<h2><a name="1.7">1.7 - Why not put the Looks JAR into the extension directory?</a></h2>
 		
+		<p>
 		First off, this issue is not specific to the JGoodies Looks,
 		it affects all Java libraries.
 
@@ -170,6 +177,7 @@
 <a href="guide/lookandtheme.html">More...</a>
 
 
+	<p>&nbsp;<br>
 		<h2><a name="2.2">2.2 - How to set a Plastic color theme?</a></h2>
 
 <pre>
@@ -181,6 +189,7 @@
 <a href="guide/lookandtheme.html">More...</a>
 		
 		
+	<p>&nbsp;<br>
 		<h2><a name="2.3">2.3 - How to remove the JTabbedPane content border?</a></h2>
 
 <pre>
@@ -195,8 +204,9 @@
 	<h1>3. Trouble Shooting</h2>
 	
 
-		<h2><a name="3.1">3.1 - ClassNotFoundExceptions when launched with Java Web Start</a></h2>
+		<h2><a name="3.1">3.1 ClassNotFoundExceptions when launched with Java Web Start</a></h2>
 
+		<p>
 	If you use a third party l&amp;f in a network launchable environment
 	such as Java Web Start, you must indicate where to find the l&amp;f classes:
 <pre>
@@ -204,10 +214,11 @@
 </pre>
 
 
-		<h2><a name="3.2">3.2 - The Plastic color theme I set is ignored.</a></h2>
+		<h2><a name="3.2">3.2 The Plastic color theme I set is ignored.</a></h2>
 
+		<p>
 	 To make use of a Plastic color theme, you must set the theme
-	 <strong>before</strong> you set the Plastic look&amp;feel in the UIManager.
+	 <em>before</em> you set the Plastic look&amp;feel in the UIManager.
 	 <a href="guide/lookandtheme.html">More...</a>
 
 
