More format changes

--- a/www/faq.html
+++ b/www/faq.html
@@ -26,7 +26,7 @@
     <p>
 		    &nbsp;3.1 - <a href="#3.1">ClassNotFoundExceptions when launched with Java Web Start.</a>
 		<br>&nbsp;3.2 - <a href="#3.2">The Plastic color theme I set is ignored.</a>
-
+	</p>
 
 	
 	<h1>1. General</h2>
@@ -67,10 +67,8 @@
 		<h2><a name="1.5">1.5 - Where do I get support?</a></h2>
 
 		<p>
-	    Please check this FAQ and 
-	    send mail only to the user mailing list
+	    Support is available only in the user mailing list
 	<a href="mailto:users@looks.dev.java.net">users@looks.dev.java.net</a>.
-	    <p>
 
 		You may subscribe to the 
 		<a href="https://looks.dev.java.net/servlets/ProjectMailingListList">users mailing list</a> 
@@ -93,7 +91,7 @@
 		<p>
 		Priority support is available for commercial licensees of the 
 		<a href="http://www.jgoodies.com/products/swingsuite.html">JGoodies Swing Suite</a>. 
-		These can contact us by phone or direct questions to support@JGoodies.com.
+		These can contact us by phone or direct questions to support at JGoodies dot com.
 		
 
 		<h2><a name="1.6">1.6 - How to report a problem?</a></h2>
@@ -174,7 +172,7 @@
       UIManager.setLookAndFeel(new PlasticXPLookAndFeel());
    } catch (Exception e) {}
 </pre>
-<a href="guide/lookandtheme.html">More...</a>
+See also the section "Look &amp; Theme" in the Looks' User's Guide.
 
 
 	<p>&nbsp;<br>
@@ -186,7 +184,7 @@
       UIManager.setLookAndFeel(new Plastic3DLookAndFeel());
    } catch (Exception e) {}
 </pre>
-<a href="guide/lookandtheme.html">More...</a>
+See also the section "Look &amp; Theme" in the Looks' User's Guide.
 		
 		
 	<p>&nbsp;<br>
