--- a/www/faq.html
+++ b/www/faq.html
@@ -1,10 +1,21 @@
 <html>
+<head>
+	<title>FAQ</title>
+	<meta name="description" content="The JGoodies Looks make your Swing apps and applets look better.">
+	<meta name="author"   content="Karsten Lentzsch">
+	<meta name="keywords" content="JGoodies Looks Java Swing Look Feel UI Design Usability">
+	<meta name="robots"	  content="index, follow">
+	<meta name="date"	  content="2006-03-03">
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+</head>
 <body>
 
-	  
-	<h1>Frequently Asked Questions</h1>
+	 
+	<div class="h2">
+	<h2>Frequently Asked Questions</h2>
+	</div>
 
-	<h2>1. General</h2>
+	<h3>1. General</h3>
     <p>
 		    &nbsp;1.1 - <a href="#1.1">What are the main benefits of the Looks?</a>
 		<br>&nbsp;1.2 - <a href="#1.2">Can I use the Looks in a commercial product?</a>
@@ -15,23 +26,23 @@
 		<br>&nbsp;1.7 - <a href="#1.7">Why not put the Looks JAR into the extension directory?</a>
 
 
-	<h2>2. Working With the Look&amp;Feels</h2>
+	<h3>2. Working With the Look&amp;Feels</h3>
     <p>
 		    &nbsp;2.1 - <a href="#2.1">How to use a JGoodies Look&amp;Feel?</a>
 		<br>&nbsp;2.2 - <a href="#2.2">How to set a Plastic color theme?</a>
 		<br>&nbsp;2.3 - <a href="#2.3">How to remove the JTabbedPane content border?</a>
 
 
-	<h2>3. Trouble Shooting</h2>
+	<h3>3. Trouble Shooting</h3>
     <p>
 		    &nbsp;3.1 - <a href="#3.1">ClassNotFoundExceptions when launched with Java Web Start.</a>
 		<br>&nbsp;3.2 - <a href="#3.2">The Plastic color theme I set is ignored.</a>
 	</p>
 
 	
-	<h1>1. General</h2>
+	<h3>1. General</h3>
 	
-		<h2><a name="1.1">1.1 - What are the main benefits of the Looks?</a></h2>
+		<h4><a name="1.1">1.1 - What are the main benefits of the Looks?</a></h4>
 
 		<p>
 		The Looks improve the readability, legibility and usability. 
@@ -39,7 +50,7 @@
 		And many people have reviewed them as elegant.
 
 
-		<h2><a name="1.2">1.2 - Can I use the Looks in a commercial product?</a></h2>
+		<h4><a name="1.2">1.2 - Can I use the Looks in a commercial product?</a></h4>
 
 		<p>
 		You can use and redistribute the Looks in source and binary form
@@ -47,7 +58,7 @@
 		<a href="../LICENSE.txt">BSD open source license</a>.
 
 
-		<h2><a name="1.3">1.3 - Where do I get the latest version?</a></h2>
+		<h4><a name="1.3">1.3 - Where do I get the latest version?</a></h4>
 
 		<p>
 		The latest version is available in the project's 
@@ -56,7 +67,7 @@
 		sources, tutorial, documentation and the Looks Demo.
 		
 
-		<h2><a name="1.4">1.4 - Where can I find a version for Java 1.3?</a></h2>
+		<h4><a name="1.4">1.4 - Where can I find a version for Java 1.3?</a></h2>
 
 		<p>
 		The Looks version 1.1.3 is available in the  
@@ -64,7 +75,7 @@
 		of the Documents &amp; files section of the java.net project pages.
 		
 
-		<h2><a name="1.5">1.5 - Where do I get support?</a></h2>
+		<h4><a name="1.5">1.5 - Where do I get support?</a></h4>
 
 		<p>
 	    Support is available only in the user mailing list
@@ -94,7 +105,7 @@
 		These can contact us by phone or direct questions to support at JGoodies dot com.
 		
 
-		<h2><a name="1.6">1.6 - How to report a problem?</a></h2>
+		<h4><a name="1.6">1.6 - How to report a problem?</a></h4>
 		
 		<p>
 		In case of a general problem, first 
@@ -120,7 +131,7 @@
 	    with the default Windows L&amp;f.
 		
 		
-		<h2><a name="1.7">1.7 - Why not put the Looks JAR into the extension directory?</a></h2>
+		<h4><a name="1.7">1.7 - Why not put the Looks JAR into the extension directory?</a></h4>
 		
 		<p>
 		First off, this issue is not specific to the JGoodies Looks,
