--- a/www/faq.html
+++ b/www/faq.html
@@ -40,7 +40,9 @@
 	</p>
 
 	
+	<div class="h3">
 	<h3>1. General</h3>
+	</div>
 	
 		<h4><a name="1.1">1.1 - What are the main benefits of the Looks?</a></h4>
 
@@ -174,9 +176,11 @@
 
 	<p>&nbsp;<br>
 	
-	<h1>2. Working With Look&amp;Feels</h2>
+	<div class="h3">
+	<h3>2. Working With Look&amp;Feels</h3>
+	</div>
 	
-		<h2><a name="2.1">2.1 - How to use a JGoodies Look&amp;Feel?</a></h2>
+		<h4><a name="2.1">2.1 - How to use a JGoodies Look&amp;Feel?</a></h4>
 
 <pre>
    try {
@@ -187,7 +191,7 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 
 
 	<p>&nbsp;<br>
-		<h2><a name="2.2">2.2 - How to set a Plastic color theme?</a></h2>
+		<h4><a name="2.2">2.2 - How to set a Plastic color theme?</a></h4>
 
 <pre>
    PlasticLookAndFeel.setPlasticTheme(new DesertBlue());
@@ -199,7 +203,7 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 		
 		
 	<p>&nbsp;<br>
-		<h2><a name="2.3">2.3 - How to remove the JTabbedPane content border?</a></h2>
+		<h4><a name="2.3">2.3 - How to remove the JTabbedPane content border?</a></h4>
 
 <pre>
    JTabbedPane tabbedPane = new JTabbedPane();
@@ -210,10 +214,10 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 		
 	<p>&nbsp;<br>
 	
-	<h1>3. Trouble Shooting</h2>
+	<h3>3. Trouble Shooting</h3>
 	
 
-		<h2><a name="3.1">3.1 ClassNotFoundExceptions when launched with Java Web Start</a></h2>
+		<h4><a name="3.1">3.1 ClassNotFoundExceptions when launched with Java Web Start</a></h4>
 
 		<p>
 	If you use a third party l&amp;f in a network launchable environment
@@ -223,7 +227,7 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 </pre>
 
 
-		<h2><a name="3.2">3.2 The Plastic color theme I set is ignored.</a></h2>
+		<h4><a name="3.2">3.2 The Plastic color theme I set is ignored.</a></h4>
 
 		<p>
 	 To make use of a Plastic color theme, you must set the theme
