--- a/www/faq.html
+++ b/www/faq.html
@@ -19,10 +19,10 @@
     <p>
 		    &nbsp;1.1 - <a href="#1.1">What are the main benefits of the Looks?</a>
 		<br>&nbsp;1.2 - <a href="#1.2">Can I use the Looks in a commercial product?</a>
-		<br>&nbsp;1.3 - <a href="#1.3">Where do I get the latest version?</a>
-		<br>&nbsp;1.4 - <a href="#1.4">Where can I find a version for Java 1.3?</a>
-		<br>&nbsp;1.5 - <a href="#1.5">Where do I get support?</a>
-		<br>&nbsp;1.6 - <a href="#1.6">How to report a problem?</a>
+		<br>&nbsp;1.3 - <a href="#1.3">Where do I get support?</a>
+		<br>&nbsp;1.4 - <a href="#1.4">How to report a problem?</a>
+		<br>&nbsp;1.5 - <a href="#1.5">Where do I get the latest version?</a>
+		<br>&nbsp;1.6 - <a href="#1.6">Where can I find a version for Java 1.3?</a>
 		<br>&nbsp;1.7 - <a href="#1.7">Why not put the Looks JAR into the extension directory?</a>
 
 
@@ -44,37 +44,30 @@
 		<h4><a name="1.1">1.1 - What are the main benefits of the Looks?</a></h4>
 
 		<p>
-		The Looks improve the readability, legibility and usability. 
-		They simplify the support for multiple platforms. 
-		And many people have reviewed them as elegant.
+		The JGoodies Looks improve the readability, legibility, consistency and 
+		in turn the usability of your Java applications and applets. 
+		They simplify the support for multiple platforms by using similar
+		component sizes in the different JGoodies Look&amp;Feels.
+		Hence, switching the Look&amp;Feel doesn't change the size
+		of your forms and editors.
+		Also, the JGoodies Looks bring bug fixes from recent Java runtimes
+		to older Java versions.
+		And last but not least, many people have reviewed the
+		JGoodies L&amp;Fs as elegant.
 
 
 		<h4><a name="1.2">1.2 - Can I use the Looks in a commercial product?</a></h4>
 
 		<p>
-		You can use and redistribute the Looks in source and binary form
-		- even for commercial use - if you comply with the terms of the 
-		<a href="../LICENSE.txt">BSD open source license</a>.
+		You can use and redistribute the JGoodies Looks in source and binary form
+		- even for commercial use - if you comply with the very relaxed terms 
+		of the <a href="../LICENSE.txt">BSD open source license</a>.
+		The BSD license has been chosen, because it allows many uses,
+		and the few license terms are short and human readable, 
+		even if you're not a lawyer.
 
 
-		<h4><a name="1.3">1.3 - Where do I get the latest version?</a></h4>
-
-		<p>
-		The latest version is available in the project's 
-		<a href="https://looks.dev.java.net/servlets/ProjectDocumentList">download section</a>
-		section, where you can download the libraries, 
-		sources, tutorial, documentation and the Looks Demo.
-		
-
-		<h4><a name="1.4">1.4 - Where can I find a version for Java 1.3?</a></h2>
-
-		<p>
-		The Looks version 1.1.3 is available in the  
-		<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">Archive</a>
-		of the Documents &amp; files section of the java.net project pages.
-		
-
-		<h4><a name="1.5">1.5 - Where do I get support?</a></h4>
+		<h4><a name="1.3">1.3 - Where do I get support?</a></h4>
 
 		<p>
 	    Support is available only in the user mailing list
@@ -104,7 +97,7 @@
 		These can contact us by phone or direct questions to support at JGoodies dot com.
 		
 
-		<h4><a name="1.6">1.6 - How to report a problem?</a></h4>
+		<h4><a name="1.4">1.4 - How to report a problem?</a></h4>
 		
 		<p>
 		In case of a general problem, first 
@@ -130,6 +123,23 @@
 	    with the default Windows L&amp;f.
 		
 		
+		<h4><a name="1.5">1.5 - Where do I get the latest version?</a></h4>
+
+		<p>
+		The latest version is available in the project's 
+		<a href="https://looks.dev.java.net/servlets/ProjectDocumentList">download section</a>
+		section, where you can download the libraries, 
+		sources, tutorial, documentation and the Looks Demo.
+		
+
+		<h4><a name="1.6">1.6 - Where can I find a version for Java 1.3?</a></h2>
+
+		<p>
+		The Looks version 1.1.3 is available in the  
+		<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">Archive</a>
+		of the Documents &amp; files section of the java.net project pages.
+		
+
 		<h4><a name="1.7">1.7 - Why not put the Looks JAR into the extension directory?</a></h4>
 		
 		<p>
@@ -182,7 +192,6 @@
 See also the section "Look &amp; Theme" in the Looks' User's Guide.
 
 
-	<p>&nbsp;<br>
 		<h4><a name="2.2">2.2 - How to set a Plastic color theme?</a></h4>
 
 <pre>
@@ -194,7 +203,6 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 See also the section "Look &amp; Theme" in the Looks' User's Guide.
 		
 		
-	<p>&nbsp;<br>
 		<h4><a name="2.3">2.3 - How to remove the JTabbedPane content border?</a></h4>
 
 <pre>
