--- a/www/faq.html
+++ b/www/faq.html
@@ -79,8 +79,8 @@
 	<a href="http://www.jgoodies.com/freeware/looksdemo/index.html">JGoodies Looks Demo</a>.
 	Follow the instructions in the User's Guide how to use a JGoodies Look&amp;Feel,
 	how to configure it, and how to use the optional features.
-	You may then study the 
-	<a href="http://www.jgoodies.com/articles/">JGoodies articles and presentations</a>.
+	You may also study the presentation "First Aid for Swing" at
+	the <a href="http://www.jgoodies.com/articles/">JGoodies articles</a> page.
 
 	
 
@@ -171,11 +171,11 @@
 	On the other hand, the JGoodies Windows L&amp;F may lag slightly behind
 	the most recent Sun Windows L&amp;F. This is because the Sun or JGoodies
 	code may include a bug fix earlier than the other. Most Sun bug fixes
-	are inherited by the JGoodies implementation, not every bug.
+	are inherited by the JGoodies implementation, but not every fix.
 	For example when Sun introduced subpixel anti-aliasing in an early
 	Java 6 preview, the JGoodies implementation supported it with a delay
-	of 2 month. But we always try to catch up with the core 
-	before a new major Java version is available.
+	of 2 months. But we always try to catch up with the core 
+	<em>before</em> a new major Java version is available.
 	
 	<p>
 	We are interested in moving the fixes and changes made in the JGoodies
