Consistent texts in README, FAQ and project home

--- a/www/faq.html
+++ b/www/faq.html
@@ -48,14 +48,35 @@
 	<p>
 	The JGoodies Looks improve the readability, legibility, consistency and 
 	in turn the usability of your Java applications and applets. 
-	They simplify the support for multiple platforms by using similar
-	component sizes in the different JGoodies Look&amp;Feels.
-	Hence, switching the Look&amp;Feel doesn't change the size
-	of your forms and editors.
-	Also, the JGoodies Looks bring bug fixes from recent Java runtimes
+	And many people have reviewed the JGoodies L&amp;Fs as elegant.
+	Also, the JGoodies Looks bring bug fixes from recent Java versions
 	to older Java versions.
-	And last but not least, many people have reviewed the
-	JGoodies L&amp;Fs as elegant.
+	
+	<p>
+	The JGoodies Windows Look&amp;Feel focuses on a precise emulation
+	on Windows 95/98/NT/ME/2000/2003/XP/Vista in the following areas: 
+	menus, icons, colors, borders, fonts, font sizes, insets, and widget dimensions.
+	It honors the screen resolution (96dpi vs. 120 dpi) 
+	to adjust sizes, insets, and widget dimensions.
+	And it honors the desktop font size setting in western Windows environments.
+	
+	<p>
+	Plastic, Plastic3D, and PlasticXP are elegant multi-platform Look&amp;Feels
+	that look good on all Windows platforms, including XP.
+	The Plastic themes have been tweaked for a harmonic integration 
+	with the majority of desktops so that your applications
+	won't alienate a Windows user.	
+	
+	<p>
+	The JGoodies Looks simplify the support for different Java versions,
+	operating systems, and Look&amp;Feels.
+	Each look is consistent over the Java versions 1.4.1x, 1.4.2x, 1.5,
+	and 1.6 betas - to the possible extent w. r. t. to the underlying 
+	Swing implementation. 
+	And all JGoodies L&amp;Fs use similar component sizes 
+	to minimize the layout differences when switching the Look&amp;Feel.
+
+
 
 
 	<h4><a name="commercialUse">Can I use the Looks in a commercial product?</a></h4>
