--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,12 @@
 <html>
   <body>
   
+	<p>
 	<i>Free High-Fidelity Windows and Multi-Platform Appearance</i>
   
 	<p>
 	The JGoodies Looks make your Swing apps and applets look better. 
-	The&nbsp;package consists of a Windows look&amp;feel and the Plastic look&amp;feel family.
+	The&nbsp;package consists of a Windows Look&amp;Feel and the Plastic Look&amp;Feel family.
 	These have been optimized for readability, precise micro-design and usability. 
   
 	<p>
@@ -30,7 +31,6 @@
 
 
 	<h3>Download</h3>
-	
 	<p>
 	You can 
 	<a href="servlets/ProjectDocumentList">download</a> 
@@ -43,46 +43,19 @@
 	<h3>Top Questions</h3>
 	
 	<p>
-	    ::&nbsp;<a href="https://looks.dev.java.net/faq.html#benefits">What are the main benefits?</a>
-	<br>::&nbsp;<a href="https://looks.dev.java.net/faq.html#commercialUse">Can I use the Looks in a commercial product?</a>
-	<br>::&nbsp;<a href="https://looks.dev.java.net/faq.html#howToGetStarted">How to get started?</a>
-	<br>::&nbsp;<a href="https://looks.dev.java.net/faq.html#support">Where do I get support?</a>
-	<br>::&nbsp;<a href="https://looks.dev.java.net/faq.html#howToReportAProblem">How to report a problem?</a>
-	<br>::&nbsp;<a href="https://looks.dev.java.net/faq.html#differencesSun">What are the differences between the Sun and JGoodies Windows L&amp;Fs?</a>
+	    <a href="https://looks.dev.java.net/faq.html#benefits">What are the main benefits?</a>
+	<br><a href="https://looks.dev.java.net/faq.html#commercialUse">Can I use the Looks in a commercial product?</a>
+	<br><a href="https://looks.dev.java.net/faq.html#howToGetStarted">How to get started?</a>
+	<br><a href="https://looks.dev.java.net/faq.html#support">Where do I get support?</a>
+	<br><a href="https://looks.dev.java.net/faq.html#howToReportAProblem">How to report a problem?</a>
+	<br><a href="https://looks.dev.java.net/faq.html#differencesSun">What are the differences between the Sun and JGoodies Windows L&amp;Fs?</a>
+	
+	<p>
+	Find more questions and answers in the <a href="faq.html">FAQ</a>.
 
-    <h3>Features</h3>
- 
-	<p><strong>JGoodies Windows L&amp;F :: Precise Emulation</strong><br>
-
-	The JGoodies Windows look&amp;feel focuses on a precise emulation
-	on Windows 95/98/NT/ME/2000/2003/XP in the following areas: 
-	menus, icons, colors, borders, fonts, font sizes, insets, and widget dimensions.
-	It honors the screen resolution (96dpi vs. 120 dpi) 
-	to adjust sizes, insets, and widget dimensions.
-
-
-    <p><strong>High-Fidelity Multi Platform Appearance</strong><br>
-
-	Plastic is an elegant multi-platform look&amp;feel family that works very well 
-	on all Windows platforms, including XP.
-	The Plastic themes have been tweaked for a harmonic integration 
-	with the majority of desktops so that your applications
-	won't alienate a Windows user.
-
-
-	<p><strong>Simplifying Multi Platform Support</strong><br>
-
-	The Looks help you support different Java versions and operating systems.
-	Each look is consistent over the Java versions 1.4.1x, 1.4.2x, 1.5,
-	and 1.6 betas - to the possible extent w. r. t. to features of the underlying Swing API.
-
-	<p>In addition, Plastic, the JGoodies Windows look&amp;feel, and the Mac OS X Aqua look
-	use similar widget dimensions and widget font baselines to minimize layout 
-	differences between these looks.
 
 
 	<h3>Proof of Concept</h3>
-		
 	<p>
 	The Looks library ensures the visual quality of the 
 	JGoodies freeware <a href="http://www.jgoodies.com/freeware/index.html">tools and demos</a> 
@@ -90,7 +63,6 @@
 
 
 	<h3>Acknowledgements</h3>
-	
 	<p>
 	The Looks project has been financed by 
 	the Java desktop team at Sun Microsystems,
