Minor layout improvements

--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,11 @@
   
 	<p>
 	The JGoodies Looks make your Swing apps and applets look better. 
-	The&nbsp;package consists of a Windows Look&amp;Feel and the Plastic Look&amp;Feel family.
+	The&nbsp;package consists of a precise Windows Look&amp;Feel 
+	and the elegant Plastic Look&amp;Feel family.
 	These have been optimized for readability, precise micro-design and usability. 
-  
+  	<a href="faq.html">More...</a>
+  	
 	<p>
 	<center>
 	<table width="490" border="0" cellspacing="0" cellpadding="0">
@@ -37,7 +39,6 @@
 	<br><a href="faq.html#support">Where do I get support?</a>
 	<br><a href="faq.html#howToReportAProblem">How to report a problem?</a>
 	<br><a href="faq.html#differencesSun">What are the differences between the Sun and JGoodies Windows L&amp;Fs?</a>
-	<br><a href="faq.html">More questions and answers...</a>
 
 
 
