Minor text changes

--- a/README.html
+++ b/README.html
@@ -70,8 +70,8 @@
 	<h1>:: Readme :: Looks 2.0 ::</h1>
 	
 	The JGoodies Looks make your Swing applications and applets look better. 
-	The&nbsp;package consists of a precise Windows look&amp;feel and 
-	the elegant Plastic look&amp;feel family.
+	The&nbsp;package consists of a Windows look&amp;feel and 
+	the Plastic look&amp;feel family.
 	These have been optimized for readability, precise micro-design and usability. 
 	
 	<p>
