--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 	The&nbsp;package consists of a precise Windows Look&amp;Feel 
 	and the elegant Plastic Look&amp;Feel family.
 	These have been optimized for readability, precise micro-design and usability. 
-  	<a href="faq.html">More...</a>
+  	
   	
 	<p>
 	<center>
@@ -39,7 +39,7 @@
 	<br><a href="faq.html#support">Where do I get support?</a>
 	<br><a href="faq.html#howToReportAProblem">How to report a problem?</a>
 	<br><a href="faq.html#differencesSun">What are the differences between the Sun and JGoodies Windows L&amp;Fs?</a>
-
+	<br><a href="faq.html">More questions and answers...</a>
 
 
 	<h3>Download</h3>
@@ -72,7 +72,6 @@
 
 
 	<h3>Please Help!</h3>
-	
 	<p>
 	If you are a professional user, satisfied with the JGoodies Looks, please help me
 	finance my Java desktop activities by licensing the commercial 
