--- a/www/faq.html
+++ b/www/faq.html
@@ -128,7 +128,7 @@
 	These can contact us by phone or direct questions to support at JGoodies dot com.
 		
 	<p>
-	If you have general questions related to Java look&amp;feels
+	If you have general questions about Swing and Java look&amp;feels,
 	you better post to the Java desktop forums at www.java.net.
 	That's a great place to share information with the Java desktop community.
 	And we frequently check this forum and participate in discussions.	
@@ -139,35 +139,39 @@
 	<p>
 	Before you report a problem, check this FAQ and check if the problem 
 	is in the Java core or in the JGoodies Looks. Basically bugs in 
-	the Java core shall be reported to Sun, issues with the JGoodies
+	the Java core shall be reported to Sun, bugs in the JGoodies
 	to the JGoodies project.
 	
 	<p>
-	We generally don't accept bugs that are in the Java core.
-	There are many issues with the Sun L&amp;fs and there are
-	even more issues if you take different Java runtimes into account.
-	Most of the Java core issues are inherited by the JGoodies L&amp;fs.
+	We don't accept reports for bugs that are in the Java core.
+	There are many issues with the Sun L&amp;fs in each individual Java version.
+	And there are even more issues in all Java versions that run the JGoodies Looks.
 	But we can't do more than Sun's Swing team does for a single Java version.
+	Most of the Java core issues "shine through" to the JGoodies L&amp;fs.
 	So if you can reproduce a Plastic issue with Sun's Metal L&amp;F, 
 	then report it to Sun. 
-	If you can reproduce a JGoodies Windows issue with Sun's Windows L&amp;F
+	If you can reproduce a JGoodies Windows issue with Sun's Windows L&amp;F,
 	report it to Sun.
 	
 	<p>
-	If you think you've found a bug in the JGoodies Looks 
-	and again, only in the JGoodies Looks, you may check back
-	in the issue tracker or may ask in the user mailing list, 
-	if this issue is already know.
+	If you think you've found a bug in the JGoodies Looks, 
+	and again, not in the Java core but in the JGoodies Looks, 
+	you may check back in the issue tracker or 
+	may ask in the user mailing list, 
+	if this issue is already known.
 	
 	<p>
 	If you report a bug, please provide at least the following information:
 	JRE vendor, JRE version, JRE build, OS, OS version, Looks version,
-	Look&amp;feel used, and if the problem can be reproduced with the
-	JGoodies Looks Demo.
+	Look&amp;feel used, and whether the problem can be reproduced with the
+	JGoodies Looks Demo or not.
 	For example: <em>Sun Java 1.5.0_06, Windows XP, Looks 2.0, PlasticXP,
 	can be reproduced with the JGoodies Looks Demo</em>. 
+	Please point us to the Looks Demo, if it shows a problem.
 	If you cannot reproduce the problem with the Looks Demo,
-	a screenshot can often help us understand the problem.
+	please describe the steps to produce the problem.
+	Often a screenshot makes it easier to understand a problem,
+	or a request for an enhancement.
 	
 		
 	
