--- a/www/faq.html
+++ b/www/faq.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <table border="0" width="540" cellspacing="0" cellpadding="0">
+  <table border="0" width="400" cellspacing="0" cellpadding="0">
   <tr>
   <td>
 	 
@@ -133,11 +133,11 @@
 	<p>
 	The user mailing list helps us reduce the costs for managing 
 	this freeware project. In the mailing list all project users
-	can jump in to assist you if you face a problem with the library or API. 
+	can jump in to assist you, if you face a problem with the library or API. 
 	And other users can benefit from your questions and our answers.
 	Personal mail to JGoodies.com bypasses the other project developers,
-	and often leads to unnecessary extra work; it slows down
-	the development process, costs time and money on our side.
+	and it often leads to unnecessary extra work; it slows down
+	the development process, and it costs time and money on our side.
 	</p>
 	
 	<p>
