Tested new width limitation

--- a/www/faq.html
+++ b/www/faq.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
-  <table border="0" width="300" cellspacing="0" cellpadding="0">
-  <tr>
-  <td>
-	 
 	<div class="h2">
 	<h2>Frequently Asked Questions</h2>
 	</div>
 
+  <table border="1" width="500" cellspacing="0" cellpadding="0">
+  <tr>
+  <td colwidth="500">
+	 
 	<h3>General</h3>
     <p>
 		    &nbsp;<a href="#benefits">What are the main benefits of the Looks?</a>
