--- a/www/faq.html
+++ b/www/faq.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
+  <table border="0" width="500" cellspacing="0" cellpadding="0">
+  <tr>
+  <td>
+	 
 	<div class="h2">
 	<h2>Frequently Asked Questions</h2>
 	</div>
 
-  <table border="1" width="500" cellspacing="0" cellpadding="0">
-  <tr>
-  <td colwidth="500">
-	 
 	<h3>General</h3>
     <p>
 		    &nbsp;<a href="#benefits">What are the main benefits of the Looks?</a>
@@ -311,7 +311,9 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 
 <pre>
    JTabbedPane tabbedPane = new JTabbedPane();
-   tabbedPane.putClientProperty(Options.NO_CONTENT_BORDER_KEY, Boolean.TRUE);
+   tabbedPane.putClientProperty(
+       Options.NO_CONTENT_BORDER_KEY, 
+       Boolean.TRUE);
 </pre>
 
 		
@@ -323,7 +325,9 @@ See also the section "Look &amp; Theme" in the Looks' User's Guide.
 	such as Java Web Start, you must indicate where to find the l&amp;f classes:
 	</p>
 <pre>
-   UIManager.put("ClassLoader", LookUtils.class.getClassLoader());
+   UIManager.put(
+       "ClassLoader", 
+       LookUtils.class.getClassLoader());
 </pre>
 
 
