--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,10 @@
 <html>
   <body>
   
+  <table border="0" width="540" cellspacing="0" cellpadding="0">
+  <tr>
+  <td>
+	 
 	<p>
 	The JGoodies Looks make your Swing apps and applets look better. 
 	The&nbsp;package consists of a precise Windows Look&amp;Feel 
@@ -83,6 +87,9 @@
 	</p>
 
 
+  </td>
+  </tr>
+  </table>
   
 </body>
 </html>
