--- a/README.html
+++ b/README.html
@@ -67,7 +67,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 2.0.2 ::</h1>
+	<h1>:: Readme :: Looks 2.0.2 Snapshot ::</h1>
 	
 	The JGoodies Looks make your Swing applications and applets look better. 
 	The&nbsp;package consists of a Windows look&amp;feel and 
