Prepared the 2.0.3 build

--- a/README.html
+++ b/README.html
@@ -67,7 +67,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 2.0.3 Snapshot ::</h1>
+	<h1>:: Readme :: Looks 2.0.3 ::</h1>
 	
 	The JGoodies Looks make your Swing applications and applets look better. 
 	The&nbsp;package consists of a Windows look&amp;feel and 
@@ -92,7 +92,7 @@
 
 		<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		    <td><tt>looks-2.0.3-snapshot.jar</tt></td>
+		    <td><tt>looks-2.0.3.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
@@ -137,17 +137,22 @@
 		<tr>
 		    <td><tt>lib</tt></td>
 		    <td>&nbsp;</td>
-		    <td>library used to compile and run the simple Looks demo</td>
+		    <td>library used to compile and run the simple Looks Demo</td>
+		</tr>
+		<tr>
+		    <td><tt>demo/demo.jar</tt></td>
+		    <td>&nbsp;</td>
+		    <td>precompiled simple Looks Demo</td>
+		</tr>
+		<tr>
+		    <td><tt>demo/fonttest.jar</tt></td>
+		    <td>&nbsp;</td>
+		    <td>precompiled Font Test</td>
 		</tr>
 		<tr>
 		    <td><tt>demo/tiny.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>precompiled Tiny example</td>
-		</tr>
-		<tr>
-		    <td><tt>demo/demo.jar</tt></td>
-		    <td>&nbsp;</td>
-		    <td>precompiled simple Looks demo</td>
 		</tr>
 		<tr><td colspan="3">&nbsp;</td></tr>
 		<tr>
