Updated for the 2.1.0 build

--- a/README.html
+++ b/README.html
@@ -67,7 +67,7 @@
 	<table width="530" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	  <td>
-	<h1>:: Readme :: Looks 2.1 Beta1 ::</h1>
+	<h1>:: Readme :: Looks 2.1.0 ::</h1>
 	
 	The JGoodies Looks make your Swing applications and applets look better. 
 	The&nbsp;package consists of a Windows look&amp;feel and 
@@ -92,7 +92,7 @@
 
 		<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		    <td><tt>looks-2.1b1.jar</tt></td>
+		    <td><tt>looks-2.1.0.jar</tt></td>
 		    <td>&nbsp;</td>
 		    <td>the library jar</td>
 		</tr>
