New download location

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
 	<h3>Download</h3>
 	<p>
 	You can 
-	<a href="servlets/ProjectDocumentList">download</a> 
+	<a href="http://www.jgoodies.com/downloads/libraries.html">download</a> 
 	the latest release, archived versions, and the precompiled 
 	JGoodies Looks Demo. Each distribution includes 
 	the binary library JAR, library sources, a User's Guide,
@@ -69,9 +69,8 @@
 
 	<h3>Acknowledgements</h3>
 	<p>
-	The Looks project has been financed by 
-	the Java desktop team at Sun Microsystems,
-	and customers of the 
+	The Looks project is financed by 
+	customers of the 
 	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.
