--- a/README.html
+++ b/README.html
@@ -74,7 +74,8 @@
 	These have been optimized for readability, precise micro-design and usability. 
 	
      <p>
-     Since version 2.4 the JGoodies Looks requires Java 5 or later. 
+     Since version 2.4 the JGoodies Looks requires Java 5 or later
+     and the JGoodies Common library.
      Looks versions for Java 1.4 are available in the 
      <a href="http://www.jgoodies.com/downloads/archive.html">JGoodies Archive</a>.
 	
