--- a/src/core/overview.html
+++ b/src/core/overview.html
@@ -42,9 +42,9 @@
 	These have been optimized for readability, precise micro-design and usability. 
 
 	<p>
-	The Looks require Java 1.4 or later. 
-	A version for Java 1.3 is 
-	<a href="https://looks.dev.java.net/servlets/ProjectDocumentList?folderID=2975">here</a>.
+	The JGoodies Looks require Java 6 or later. 
+	Versions for older Java runtimes are available at
+	<a href="http://joodies.com/downloads/archive.html">here</a>.
 
 	 
 	 <h2>Getting Started</h2>
