--- a/README.html
+++ b/README.html
@@ -45,13 +45,12 @@
 	<p>
 	<a class="nav" href="docs/api/index.html"><b>API Docs</b></a>
 	<p>
-	<b>Web Pages</b>
-	<br>::&nbsp;<a class="nav" href="http://looks.java.net/">Project Home</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.java.net/servlets/ProjectDocumentList">Downloads</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.java.net/servlets/ProjectNewsList">Announcements</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.java.net/servlets/ProjectMailingListList">Mailing Lists</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.java.net/servlets/ProjectIssues">Issue Tracker</a>
-	<br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/freeware/">More Examples</a>
+    <b>Web Pages</b>
+    <br>::&nbsp;<a class="nav" href="http://java.net/projects/looks/">Project Home</a>
+    <br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/downloads/libraries.html">Download</a>
+    <br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/downloads/archive.html">Archive</a>
+    <br>::&nbsp;<a class="nav" href="http://java.net/projects/looks/lists">Mailing Lists</a>
+    <br>::&nbsp;<a class="nav" href="http://java.net/jira/browse/LOOKS">Issue Tracker</a>
         
          <!-- *********** Ende der Seitennavigation ******************************* -->
 
@@ -77,16 +76,6 @@
      The Looks requires Java 6 or later and the JGoodies Common library.
      Looks releases for older Java versions are available in the 
      <a href="http://www.jgoodies.com/downloads/archive.html">JGoodies Archive</a>.
-	
-	
-	<h2>Top Questions</h2>
-	
-	    ::&nbsp;<a href="https://looks.java.net/faq.html#benefits">What are the main benefits?</a>
-	<br>::&nbsp;<a href="https://looks.java.net/faq.html#commercialUse">Can I use the Looks in a commercial product?</a>
-	<br>::&nbsp;<a href="https://looks.java.net/faq.html#howToGetStarted">How to get started?</a>
-	<br>::&nbsp;<a href="https://looks.java.net/faq.html#support">Where do I get support?</a>
-	<br>::&nbsp;<a href="https://looks.java.net/faq.html#howToReportAProblem">How to report a problem?</a>
-	<br>::&nbsp;<a href="https://looks.java.net/faq.html#differencesSun">What are the differences between the Sun and JGoodies Windows L&amp;Fs?</a>
 	
 	
 	<h2>Acknowledgements</h2>
