Fixed broken web links

--- a/README.html
+++ b/README.html
@@ -47,8 +47,8 @@
 	<p>
     <b>Web Pages</b>
     <br>::&nbsp;<a class="nav" href="http://java.net/projects/looks/">Project Home</a>
-    <br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/downloads/libraries.html">Download</a>
-    <br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/downloads/archive.html">Archive</a>
+    <br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/downloads/libraries/">Download</a>
+    <br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/downloads/archive/">Archive</a>
     <br>::&nbsp;<a class="nav" href="http://java.net/projects/looks/lists">Mailing Lists</a>
     <br>::&nbsp;<a class="nav" href="http://java.net/jira/browse/LOOKS">Issue Tracker</a>
         
@@ -75,14 +75,13 @@
      <p>
      The Looks requires Java 6 or later and the JGoodies Common library.
      Looks releases for older Java versions are available in the 
-     <a href="http://www.jgoodies.com/downloads/archive.html">JGoodies Archive</a>.
+     <a href="http://www.jgoodies.com/downloads/archive/">JGoodies Archive</a>.
 	
 	
 	<h2>Acknowledgements</h2>
 		
 	The Looks project has been financed by customers of the 
-	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>
-	and the Java desktop team at Sun Microsystems. 
+	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.<p>
 	
