--- a/www/faq.html
+++ b/www/faq.html
@@ -214,7 +214,7 @@
 	<p>
 	If you are a professional user, satisfied with the JGoodies Looks, you may help me
 	finance my&nbsp;Java desktop activities by licensing the commercial 
-	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>.
+	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>.
 	</p>
 	
 
