--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
 	<h3>Download</h3>
 	<p>
 	You can 
-	<a href="http://www.jgoodies.com/downloads/libraries.html">download</a> 
+	<a href="http://www.jgoodies.com/downloads/libraries/">download</a> 
 	the latest release, archived versions, and the precompiled 
 	JGoodies Looks Demo. Each distribution includes 
 	the binary library JAR, library sources, a User's Guide,
@@ -71,7 +71,7 @@
 	<p>
 	The Looks project is financed by 
 	customers of the 
-	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>. 
+	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.
 	</p>
@@ -82,7 +82,7 @@
 	<p>
 	If you are a professional user, satisfied with the JGoodies Looks, please help me
 	finance my Java desktop activities by licensing the commercial 
-	<a href="http://www.jgoodies.com/products/index.html">JGoodies Swing Suite</a>.
+	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>.
 	</p>
 
 
