Updated link to the FAQ

--- a/README.html
+++ b/README.html
@@ -32,7 +32,7 @@
 	<br>::&nbsp;<a class="nav" href="docs/examples.html">Examples</a>
 	<br>::&nbsp;<a class="nav" href="docs/quickstart.html">Quick Start</a>
 	<br>::&nbsp;<a class="nav" href="docs/tips.html">Tips &amp; Tricks</a>
-	<br>::&nbsp;<a class="nav" href="http://looks.java.net/faq.html">FAQ</a>
+	<br>::&nbsp;<a class="nav" href="http://www.jgoodies.com/freeware/libraries/looks/faq/">FAQ</a>
 	<p>
 	<b>User's&nbsp;Guide</b>
 	<br>::&nbsp;<a class="nav" href="docs/guide/index.html">Introduction</a>
