Replaced references to Swing Suite by refs to Smart Client

--- a/README.html
+++ b/README.html
@@ -81,7 +81,7 @@
 	<h2>Acknowledgements</h2>
 		
 	The Looks project has been financed by customers of the 
-	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>. 
+	<a href="http://www.jgoodies.com/products/">JGoodies Smart Client</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.<p>
 	
