--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
 	<p>
 	The Looks project is financed by 
 	customers of the 
-	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>. 
+	<a href="http://www.jgoodies.com/products/">JGoodies products</a>. 
 	It is only with their money that I can provide, maintain and improve 
 	this library at no charge.
 	</p>
@@ -82,7 +82,7 @@
 	<p>
 	If you are a professional user, satisfied with the JGoodies Looks, please help me
 	finance my Java desktop activities by licensing the commercial 
-	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>.
+	<a href="http://www.jgoodies.com/products/">JGoodies Smart Client</a>.
 	</p>
 
 
