--- a/www/faq.html
+++ b/www/faq.html
@@ -151,8 +151,8 @@
 	</p>
 	
 	<p>
-	Priority support is available for commercial licensees of the 
-	<a href="http://www.jgoodies.com/products/swingsuite.html">JGoodies Swing Suite</a>. 
+	Priority support is available for licensees of the commercial 
+	<a href="http://www.jgoodies.com/products">JGoodies Smart Client</a>. 
 	These can contact us by phone or direct questions to support at JGoodies dot com.
 	</p>
 		
@@ -214,7 +214,7 @@
 	<p>
 	If you are a professional user, satisfied with the JGoodies Looks, you may help me
 	finance my&nbsp;Java desktop activities by licensing the commercial 
-	<a href="http://www.jgoodies.com/products/">JGoodies Swing Suite</a>.
+	<a href="http://www.jgoodies.com/products/">JGoodies Smart Client</a>.
 	</p>
 	
 
